# nav-mapping

./: readme.md  run_all.sh
src/: get_photo.py
src/explore_pkg/: CMakeLists.txt  package.xml
src/explore_pkg/config/: explore_params.yaml
src/explore_pkg/include/explore_pkg/: frontier_explorer.hpp
src/explore_pkg/launch/: explore.launch.py  explore_full.launch.py
src/explore_pkg/src/: explore_node.cpp  frontier_explorer.cpp
src/models/BigCubicle/: model.config  model.sdf
src/models/Black and Decker Cordless Drill/: model.sdf
src/models/ElectronicsRecycling/: model.config
src/models/SmallCubicle/: model.config  model.sdf
src/models/TrolleyBox2/: model.config  model.sdf
src/models/aws_robomaker_warehouse_TrashCanC_01/: model.sdf
src/nav_pkg/: CMakeLists.txt  package.xml
src/nav_pkg/launch/: nav.launch.py
src/slam_pkg/: CMakeLists.txt  package.xml
src/slam_pkg/launch/: slam.launch.py
src/wpr_simulation2/config/: nav2_params.yaml
src/wpr_simulation2/launch/: demo_mani_ctrl.launch.py  explore.launch.py  factory.launch.py  map_tools.launch.py  navigation.launch.py  robocup_home_mani.launch.py  slam.launch.py  spawn_objects.launch.py  spawn_persons.launch.py  spawn_wpb.launch.py  spawn_wpb_head_up.launch.py  spawn_wpb_lidar.launch.py  spawn_wpb_mani.launch.py  world.launch.py  wpb_balls.launch.py  wpb_face.launch.py  wpb_mani.launch.py  wpb_objects.launch.py  wpb_scene_1.launch.py  wpb_simple.launch.py  wpb_table.launch.py
src/wpr_simulation2/models/: MobiBot.model
src/wpr_simulation2/src/: keyboard_vel_cmd.cpp
(+2 files in other folders)
